fix: add pom, test report and use mocks in unit tests